--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "homepage":"https://ahmed-h-ismael.github.io/insure-landingPage/index.html"
   },
   "scripts": {
     "build-css":"npx tailwindcss-cli@latest build -i ./src/input.css -o ./output.css --watch"
