--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "homepage":"https://ahmed-h-ismael.github.io/insure-landingPage/index.html"
   },
   "scripts": {
-    "build-css":"npx tailwindcss-cli@latest build -i ./src/input.css -o /output.css --watch"
+    "build-css":"npx tailwindcss-cli@latest build -i ./src/input.css -o ./output.css --watch"
     
   }
 }
